# DAMM-Py

./: .gitignore  README.md  pyproject.toml
analysis/: debt_rank.py  macro_batch.py  micro_batch.py  utils.py  utils_analysis.py
src/: agents.py  main.py  parameters.yaml
src/damm/: model.py  scenarios.py  utils.py
src/damm/agents/: abstract_firm.py  bank.py  capital_firm.py  consumption_firm.py  household.py
src/damm/config/: parameters.yaml
src/macroabm/: scenarios.py  utils.py
